Add some Lack connections

--- a/content/Lack of a living world view.html
+++ b/content/Lack of a living world view.html
@@ -7,23 +7,52 @@
 <p><strong>The view of the world as dead, inanimate, and mechanistic is not particularly congruent with the synergistic, self-regulating, and complex nature of the world as it presents itself to our lived experience</strong>. However, this view makes it easier to justify manipulating its parts. Strapping the plow on the oxen both makes it into, and requires the oxen to be seen as, nothing but a machine. Further, if we see the world as inanimate then our actions cannot kill it because it never lived in the first place. The world is not a collection of <em>dead static things</em>, it is an endless ocean of <em>living flowing streams</em>.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong></li>
-	<li>  <strong><a href="The desacration of all places.html">The desacration of all places</a></strong></li>
-	<li>  <strong><a href="Ignorance of everything being sacred.html">Ignorance of everything being sacred</a></strong></li>
-	<li>  <strong><a href="Delusional domination of nature.html">Delusional domination of nature</a></strong></li>
-	<li>  <strong><a href="Story of separation.html">Story of separation</a></strong></li>
-	<li>  <strong><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></strong></li>
-	<li>  <strong><a href="Apathy.html">Apathy</a></strong></li>
-	<li>  <strong><a href="Knowledge isn't wisdom.html">Knowledge isn't wisdom</a></strong></li>
-	<li>  <strong><a href="Lack of feeling needed.html">Lack of feeling needed</a></strong></li>
-	<li>  <strong><a href="Lack of compassion.html">Lack of compassion</a></strong></li>
-	<li>  <strong><a href="Lack of empathy.html">Lack of empathy</a></strong></li>
-	<li>  <strong><a href="Immoral justifications.html">Immoral justifications</a></strong></li>
-	<li>  <strong><a href="Mistreatment of animals.html">Mistreatment of animals</a></strong></li>
-	<li>  <strong><a href="Animal views.html">Animal views</a></strong></li>
-	<li>  <strong><a href="No respect for indigenous wisdom.html">No respect for indigenous wisdom</a></strong></li>
-	<li>  <strong><a href="Evil.html">Evil</a></strong></li>
-	<li>  <strong><a href="Meaning crisis.html">Meaning crisis</a></strong></li>
+	<li><a href="Agriculture.html">Agriculture</a></li>
+	<li><a href="Animal views.html">Animal views</a></li>
+	<li><a href="Carelessness.html">Carelessness</a> - Why care for anything which lacks life and soul?</li>
+	<li><a href="Cognitive dissonance.html">Cognitive dissonance</a> - And yet, the very air quivers with life sufficiently forceful for me to miss a breath.</li>
+	<li><a href="Complexity mismatch.html">Complexity mismatch</a> - Us, humans, living creatures, or complex machines, struggling to survive on a lifeless rock inhabited by other less complex machines, yes, no, that mental model must be retired.</li>
+	<li><a href="Dealing with death.html">Dealing with death</a> - Our lack of a living world view has made dealing with death... easier? Or simply easier to avoid? What never lived can not die and still we lament.</li>
+	<li><a href="Deforestation.html">Deforestation</a> - Production, harvesting, giving the earth a gentle shave.</li>
+	<li><a href="Delusional domination of nature.html">Delusional domination of nature</a> - Must you ask why life sometimes appears lifeless?</li>
+	<li><a href="Directionlessness.html">Directionlessness</a> - I've found the notion of life and aliveness to be of great value when considering which direction to move in life. Which direction has the most life, from my current position, what landmark can I see that makes me feel alive? I should head towards that. And here I am, Coltrane's Ballads playing on the record player, my soon-to-be five month old daughter's eyes twinkling with the life of all the stars in the galaxy.</li>
+	<li><a href="Distractions.html">Distractions</a> - What isn't life is just distraction from what is.</li>
+	<li><a href="Ecological crisis.html">Ecological crisis</a></li>
+	<li><a href="Educational crisis.html">Educational crisis</a> - Where do we even begin?</li>
+	<li><a href="Educational systems.html">Educational systems</a> - Designed in accordance with the requirements for tolerance, polish, material composition, and overall uniformity of the cogs necessary to turn the machinery.</li>
+	<li><a href="Evil.html">Evil</a> - Dehumanise and devitalise your enemy and evil leaves the equation.</li>
+	<li><a href="Extreme weather.html">Extreme weather</a> - As we cease to view the world as being alive it will increase its use of force to hammer in our mistake.</li>
+	<li><a href="Faulty meta-optimisation.html">Faulty meta-optimisation</a></li>
+	<li><a href="Ignoring complexity.html">Ignoring complexity</a> - Animate everything and, all of a sudden, things are infinitely complex. This isn't new, you know?</li>
+	<li><a href="Illusion of understanding.html">Illusion of understanding</a></li>
+	<li><a href="Immoral justifications.html">Immoral justifications</a> - Am I being too kind to even believe people care about justifications? And the following step in thought of considering them immoral? Does anyone care?</li>
+	<li><a href="Industrial slaughter.html">Industrial slaughter</a> - "There is nothing intelligent to say about a massacre." - Kurt Vonnegut</li>
+	<li><a href="Lack of attentiveness.html">Lack of attentiveness</a> - "If we speak of things as inert or inanimate objects, we deny their ability to actively engage and interact with us – we foreclose their capacity to reciprocate our attentions, to draw us into silent dialogue, to inform and instruct us." - David Abrams</li>
+	<li><a href="Lack of belonging.html">Lack of belonging</a> - We belong nestled deeply within life.</li>
+	<li><a href="Lack of compassion.html">Lack of compassion</a></li>
+	<li><a href="Lack of empathy.html">Lack of empathy</a></li>
+	<li><a href="Lack of humility.html">Lack of humility</a> - The top of a wave in a stormy sea, aware, sun shining from below.</li>
+	<li><a href="Lack of love.html">Lack of love</a></li>
+	<li><a href="Loneliness.html">Loneliness</a> - Unnecessary loneliness.</li>
+	<li><a href="Material extraction.html">Material extraction</a> - Rip my ribcage open, pull my heart out, tie your stupid ponytail with my coronary arteries. "Material extraction"...</li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a></li>
+	<li><a href="Meat eating.html">Meat eating</a> - Would you argue that my biggest weakness is my tendency to frame so many questions around moral incentives? The misanthrope within wonders if anyone actually gives a fuck. Meatheads, all of us.</li>
+	<li><a href="Mental health.html">Mental health</a></li>
+	<li><a href="Misinformation.html">Misinformation</a> - Descartes' Kony 2012.</li>
+	<li><a href="Mistreatment of animals.html">Mistreatment of animals</a></li>
+	<li><a href="Monocultures (agriculture).html">Monocultures (agriculture)</a> - The world as a food factory.</li>
+	<li><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
+	<li><a href="Pollution.html">Pollution</a></li>
+	<li><a href="Reductionism.html">Reductionism</a> - Machines can easily be studied on the level of parts and components.</li>
+	<li><a href="Resources.html">Resources</a> - Be wary of using the word resources when speaking about life. Unless you work in HR.</li>
+	<li><a href="Scientism.html">Scientism</a></li>
+	<li><a href="Sense-making crisis.html">Sense-making crisis</a></li>
+	<li><a href="Simplifications.html">Simplifications</a> - Too simplified. Way too simplified.</li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a></li>
+	<li><a href="The desacration of all places.html">The desacration of all places</a> - Which is literally *all* places.</li>
+	<li><a href="The minimisation of all things wild.html">The minimisation of all things wild</a></li>
+	<li><a href="Waste.html">Waste</a> - We'll dump our waste until the world matches our expectations of its unaliveness.</li>
+	<li><a href="Wisdom crisis.html">Wisdom crisis</a> - All wisdom traditions, for millennia, have had different ways of speaking about the fundamental life force animating the world. Our enlightened present day has found that notion to be of no great utility.</li>
 </ul>
 <br>
 <br>
