--- a/content/Lack of agency.html
+++ b/content/Lack of agency.html
@@ -8,14 +8,46 @@
 <p>If nothing else, learning to accept situations where you experience a lack of agency can lead to an internal agency of thought that suddenly changes everything. There are no moments that completely lack agency, you just have to notice it.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Consumerism.html">Consumerism</a></strong></li>
-	<li>  <strong><a href="Unemployment.html">Unemployment</a></strong></li>
-	<li>  <strong><a href="Despair.html">Despair</a></strong></li>
-	<li>  <strong><a href="Apathy.html">Apathy</a></strong></li>
-	<li>  <strong><a href="Lack of visions.html">Lack of visions</a></strong></li>
-	<li>  <strong><a href="Lack of purpose.html">Lack of purpose</a></strong></li>
-	<li>  <strong><a href="Lack of communities.html">Lack of communities</a></strong></li>
-	<li>  <strong><a href="Lack of feeling needed.html">Lack of feeling needed</a></strong></li>
+	<li><a href="Apathy.html">Apathy</a> - Best to avoid caring about what you can do nothing about.</li>
+	<li><a href="Business-as-usual narrative.html">Business-as-usual narrative</a> - Best to simply follow the stream.</li>
+	<li><a href="Carelessness.html">Carelessness</a></li>
+	<li><a href="Cars.html">Cars</a> - Society is designed for cars, of course you need to have one. Or two.</li>
+	<li><a href="Complexity mismatch.html">Complexity mismatch</a> - What is required is nothing short of a revolution in agency.</li>
+	<li><a href="Consumerism.html">Consumerism</a> - The one obviously remaining agency is the capacity to act on consumerist impulses.</li>
+	<li><a href="Democracy failing.html">Democracy failing</a> - When will we reach the point where the marginal majority finds true agency in their democratic lack of it?</li>
+	<li><a href="Despair.html">Despair</a></li>
+	<li><a href="Directionlessness.html">Directionlessness</a> - If not directionlessness then at the very least an inability to steer.</li>
+	<li><a href="Educational crisis.html">Educational crisis</a> - Narrowing the child's beaming light, focused into a single point, blow out the source.</li>
+	<li><a href="Elderly care.html">Elderly care</a> - How have people in the past dealt with those deemed incapacitated by age or sickness? How would things change if we optimised for agency?</li>
+	<li><a href="Emotional crisis.html">Emotional crisis</a></li>
+	<li><a href="End of history.html">End of history</a></li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - On the few occasions where clear incentives for responsibility exist, we lack the capacity to act on them.</li>
+	<li><a href="Government.html">Government</a> - What governs the acts of modernity's governments? Filmed in front of a live studio audience.</li>
+	<li><a href="Healthcare.html">Healthcare</a></li>
+	<li><a href="Hedonism.html">Hedonism</a> - In the absence of meaningful actions, choosing which series to watch or what food to order might scratch the itch.</li>
+	<li><a href="Identity.html">Identity</a> - If who we are depends on what we do, who do we become and who do we see ourselves as when we feel unable to do what we feel we should?</li>
+	<li><a href="Ineffective institutions.html">Ineffective institutions</a> - There is an important point to make here and it relates to several of the links for this predicament. One characteristic of modernity that completely destroys our agency is the institutionalisation of everything. Education, healthcare, elderly care, institutions that might all have partly benevolent foundations but whose very nature rejects and erodes personal agency.</li>
+	<li><a href="Inertia.html">Inertia</a> - Away we go, and there's nothing we can do. Or so we might be told. Remember, there is always a broader agency outside of the box you consider to be your life.</li>
+	<li><a href="Lack of feeling needed.html">Lack of feeling needed</a></li>
+	<li><a href="Lack of purpose.html">Lack of purpose</a> - Why even consider a purpose when you're unable to act according to it?</li>
+	<li><a href="Lack of resilient systems.html">Lack of resilient systems</a> - The lack of agency experienced by the people that make up our systems make those very systems fragile and increasingly nonsensical.</li>
+	<li><a href="Loss of cultural complexity.html">Loss of cultural complexity</a> - Stay in line.</li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a> - Agency is one of the most crucial aspects of meaning.</li>
+	<li><a href="Misinformation.html">Misinformation</a> - How many people who have never tried doing anything are screaming out that there's nothing we can do? There lies great shame in a lack of agency.</li>
+	<li><a href="Modern slavery.html">Modern slavery</a> - What signifies slavery?</li>
+	<li><a href="Monocultures (people).html">Monocultures (people)</a> - Fall in line.</li>
+	<li><a href="Obesity.html">Obesity</a> - Agency over our own health. With all agency of modernity's inhabitants turned towards consumption, is anyone surprised at the success of ozempic?</li>
+	<li><a href="Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a> - We are kept safe from our agency, y'see.</li>
+	<li><a href="Parenting.html">Parenting</a> - Time to add nuance to my hate of institutions... When it comes to parental leave, at least some institution-heavy nations are doing a decent job. My daughter is currently five months old and I was home for her first two months and am now working 50%, most of which is remote work from my home office. My wife has been home with her until now when she's started working 20%. The plan is for our daughter to start going to open kindergarten play time whenever she expresses interest in it. Otherwise we have no need of help outside of the occasional grandparent taking over for a few hours. We're not missing anything and neither is our daughter, she just experienced her first snow with two relaxed parents walking into town for a coffee. Hearing stories about new parents in the US, great states of modernity, me and my wife have heard about parents having to go back to work within the first month or two of the baby's life, putting it in kindergarten around the age of seven weeks. Absolute utter insanity. Madness. Then again, in Sweden it would be illegal of us to homeschool whereas in the US you do whatever the fuck you want and face the consequences.</li>
+	<li><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a> - Live within modernity and you will spread its poisons.</li>
+	<li><a href="Pollution.html">Pollution</a></li>
+	<li><a href="Poverty.html">Poverty</a></li>
+	<li><a href="Sameness.html">Sameness</a> - Most of us forced along the path of least agency.</li>
+	<li><a href="Sedentary lifestyles.html">Sedentary lifestyles</a> - If there's nothing you can do, simply don't do anything.</li>
+	<li><a href="Slow change.html">Slow change</a></li>
+	<li><a href="Suicide.html">Suicide</a> - The agency you never lose.</li>
+	<li><a href="Violence.html">Violence</a> - The powerless struggle for power.</li>
+	<li><a href="Weber's iron cage.html">Weber's iron cage</a> - Caged, kept from agency.</li>
 </ul>
 <br>
 <br>
