--- a/content/Lack of attentiveness.html
+++ b/content/Lack of attentiveness.html
@@ -3,14 +3,57 @@
 <p>Being attentive means being observant, seeing changes in one's surroundings, noticing the needs and wants of others, being in service to others. <strong>To lack attentiveness is to not notice the effects of one's actions</strong>, to not be observant to changes in one's surroundings, to lack the care and tending to that the world requires from us.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Delusional domination of nature.html">Delusional domination of nature</a></strong></li>
-	<li>  <strong><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></strong></li>
-	<li>  <strong><a href="Individualism.html">Individualism</a></strong></li>
-	<li>  <strong><a href="Illusion of understanding.html">Illusion of understanding</a></strong></li>
-	<li>  <strong><a href="Sense-making crisis.html">Sense-making crisis</a></strong></li>
-	<li>  <strong><a href="Knowledge isn't wisdom.html">Knowledge isn't wisdom</a></strong></li>
-	<li>  <strong><a href="Nothing is local.html">Nothing is local</a></strong></li>
-	<li>  <strong><a href="Cognitive dissonance.html">Cognitive dissonance</a></strong></li>
+	<li><a href="Addiction.html">Addiction</a> - Pay attention or you'll fall right in.</li>
+	<li><a href="Animal views.html">Animal views</a> - Spend time tending to animals.</li>
+	<li><a href="Apathy.html">Apathy</a></li>
+	<li><a href="Architecture.html">Architecture</a> - Are we genuinely pleased with our built surroundings? Have we looked?</li>
+	<li><a href="Attention hijacking.html">Attention hijacking</a> - Loose attention is up for grabs.</li>
+	<li><a href="Blaming the people.html">Blaming the people</a> - Simplifying the state of things as having two distinct sides, the individual and the system, I'd argue that the most important, the most foundational and critical thing to blame on the individual, on the people, is their inability for and lack of attentiveness. If I may demand one single action it would be for people to pay attention and deepend their understanding of what that means. So, why this link? Well, I guess I'm blaming the people for their lack of attentiveness.</li>
+	<li><a href="Carelessness.html">Carelessness</a></li>
+	<li><a href="Constant connectivity.html">Constant connectivity</a> - Are you voluntarily allowing your attention to be captured?</li>
+	<li><a href="Delusional domination of nature.html">Delusional domination of nature</a> - Inattentiveness drives our delusions. Attention brings disillusionment.</li>
+	<li><a href="Disinformation.html">Disinformation</a> - Opening yourself up to be swayed.</li>
+	<li><a href="Dispositionism.html">Dispositionism</a> - Lacking attentiveness, you fall back on stereotypes and heuristics.</li>
+	<li><a href="Distractions.html">Distractions</a> - Distractions rule the worlds of most of us.</li>
+	<li><a href="Ecological crisis.html">Ecological crisis</a></li>
+	<li><a href="Educational systems.html">Educational systems</a> - Our institutions shouldn't demand attentiveness.</li>
+	<li><a href="Elderly care.html">Elderly care</a></li>
+	<li><a href="End of history.html">End of history</a> - Will we notice?</li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - Not even factoring in our general inability to consider broader responsibility, we rarely stop and pay attention to what we're stepping on in our stampede towards progress and development.</li>
+	<li><a href="Healthcare.html">Healthcare</a> - Many of our institutions have been purposely engineered to not require attentiveness. Necessary in a narrow sense, deeply unworthy in any other sense. Tending to the elderly, tending to people's health, tending to the education of our children, all without requiring the least bit of attentiveness. Heights of grandeur.</li>
+	<li><a href="Hemispherical asymmetry (Brain).html">Hemispherical asymmetry (Brain)</a> - "Where attention goes, neural firing flows, and neural connection grows." - Daniel J. Siegel. The left hemisphere may put attention in tension with our intentions.</li>
+	<li><a href="Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a> - Considering some sort of systemic attentiveness, how come a global system, so obvious in its all-encompassing and interconnected nature, can afford such inattentiveness to one half of its world? Right, it can't.</li>
+	<li><a href="Ignorance of everything being sacred.html">Ignorance of everything being sacred</a> - "Attention is the beginning of devotion." - Mary Oliver.</li>
+	<li><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a> - This predicament landscape is nothing but the result of someone, feeling lost in the world, gradually becoming somewhat attentive.</li>
+	<li><a href="Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a> - The collapse of what? Pay attention and the notion might yield hope rather than despair.</li>
+	<li><a href="Ignorance of the mystical.html">Ignorance of the mystical</a> - Anyone who has put work into their attentiveness will start finding life increasingly mystical.</li>
+	<li><a href="Ignored externalities.html">Ignored externalities</a></li>
+	<li><a href="Ignoring complexity.html">Ignoring complexity</a></li>
+	<li><a href="Ignoring diversity.html">Ignoring diversity</a></li>
+	<li><a href="Ineffective institutions.html">Ineffective institutions</a> - One can argue that the effectiveness of institutions depends on them not requiring attentiveness. So, what do the foundations of our institutions consist of?</li>
+	<li><a href="Lack of a living world view.html">Lack of a living world view</a> - Often, our attention is spread so thin we don't even perceive ourselves to be living.</li>
+	<li><a href="Lack of agency.html">Lack of agency</a> - All around you, opportunities to act. Pay attention.</li>
+	<li><a href="Lack of cultural control systems.html">Lack of cultural control systems</a> - The control systems built on attentiveness and responsibility have effectively been replaced by legal, governmental, and other institutional systems.</li>
+	<li><a href="Lack of love.html">Lack of love</a> - Love is all about attention.</li>
+	<li><a href="Loneliness.html">Loneliness</a></li>
+	<li><a href="Meat eating.html">Meat eating</a></li>
+	<li><a href="Mind-body separation.html">Mind-body separation</a> - Pay attention to your senses. There are cultures where the mind is seen as a sixth sense. Why have we decided to prioritise one sense over all the others? Am I out of my mind?</li>
+	<li><a href="Misinformation.html">Misinformation</a> - The more leaders spit when they talk, the more we seem willing to swallow.</li>
+	<li><a href="Mistreatment of animals.html">Mistreatment of animals</a></li>
+	<li><a href="Mistreatment of other humans.html">Mistreatment of other humans</a></li>
+	<li><a href="News.html">News</a> - Many of us pay attention to the world by watching the news.</li>
+	<li><a href="Nihilism.html">Nihilism</a> - Of course things appear dark if you have your eyes closed.</li>
+	<li><a href="Out of touch with seasons.html">Out of touch with seasons</a> - I can name nearly every car brand I see but I can't tell you when the magnolia flowers tend to appear or when to plant garlic.</li>
+	<li><a href="Parenting.html">Parenting</a> - There's a concept in parenting called benign neglect. Nothing wrong with that, it allows for more freedom and independent play. What about all the not-so-benign neglect modern life forces us into?</li>
+	<li><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
+	<li><a href="Pollution.html">Pollution</a></li>
+	<li><a href="Sense-making crisis.html">Sense-making crisis</a> - We rarely feel the ground we walk upon. Is there a path?</li>
+	<li><a href="Sex and sexuality.html">Sex and sexuality</a> - Sex without attentiveness is fucking. We're fucked sexless.</li>
+	<li><a href="Signal-to-noise ratio.html">Signal-to-noise ratio</a> - Develop your attention, the signals are weak in an ocean of noise.</li>
+	<li><a href="Social erosion.html">Social erosion</a> - Social erosion due to a lack of social cohesion.</li>
+	<li><a href="Social media.html">Social media</a> - Social media fills any inattentive vacuum.</li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a></li>
+	<li><a href="Wisdom crisis.html">Wisdom crisis</a></li>
 </ul>
 <br>
 <br>
