--- a/content/Lack of balance.html
+++ b/content/Lack of balance.html
@@ -2,29 +2,91 @@
 <h2>Lack of balance</h2>
 <p>Lack of balance might be one of the predicaments in the landscape that can be found in almost all other predicaments. We are out of balance in so many ways. Balance means equality of two or more masses. Figuratively, balance can also mean <strong>equality of any opposing or compared forces, objects, or processes</strong>. The more we develop, the more complex and volatile our scales become and we seem to have reached a point where the most probable path to equilibrium is an involuntary emptying of the scales. How can we find balance?</p>
 <p><strong>Outgoing connections:</strong></p>
+<p>All of these connections are off balance, driven by unbalanced actions, one-sided, or otherwise extreme on a spectrum in some sense.</p>
 <ul>
-	<li>  <strong><a href="Hemispherical asymmetry (Brain).html">Hemispherical asymmetry (Brain)</a></strong></li>
-	<li>  <strong><a href="Wisdom crisis.html">Wisdom crisis</a></strong></li>
-	<li>  <strong><a href="Finite games.html">Finite games</a></strong></li>
-	<li>  <strong><a href="Map and territory.html">Map and territory</a></strong></li>
-	<li>  <strong><a href="Lack of the longterm.html">Lack of the longterm</a></strong></li>
-	<li>  <strong><a href="The minimisation of all things wild.html">The minimisation of all things wild</a></strong></li>
-	<li>  <strong><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong></li>
-	<li>  <strong><a href="Delusional domination of nature.html">Delusional domination of nature</a></strong></li>
-	<li>  <strong><a href="Hedonism.html">Hedonism</a></strong></li>
-	<li>  <strong><a href="Culture wars.html">Culture wars</a></strong></li>
-	<li>  <strong><a href="Nothing is local.html">Nothing is local</a></strong></li>
-	<li>  <strong><a href="Obesity.html">Obesity</a></strong></li>
-	<li>  <strong><a href="Malnutrition.html">Malnutrition</a></strong></li>
-	<li>  <strong><a href="Addiction.html">Addiction</a></strong></li>
-	<li>  <strong><a href="Mental health.html">Mental health</a></strong></li>
-	<li>  <strong><a href="Lack of empathy.html">Lack of empathy</a></strong></li>
-	<li>  <strong><a href="Nuclear war.html">Nuclear war</a></strong></li>
-	<li>  <strong><a href="War.html">War</a></strong></li>
-	<li>  <strong><a href="Resource conflicts.html">Resource conflicts</a></strong></li>
-	<li>  <strong><a href="Greed.html">Greed</a></strong></li>
-	<li>  <strong><a href="Selfishness.html">Selfishness</a></strong></li>
-	<li>  <strong><a href="Access to food.html">Access to food</a></strong></li>
+	<li><a href="Acceleration.html">Acceleration</a></li>
+	<li><a href="Access to food.html">Access to food</a></li>
+	<li><a href="Access to water.html">Access to water</a></li>
+	<li><a href="Addiction.html">Addiction</a></li>
+	<li><a href="Agriculture.html">Agriculture</a></li>
+	<li><a href="Ancient sunlight, old sunlight, current sunlight.html">Ancient sunlight, old sunlight, current sunlight</a></li>
+	<li><a href="Architecture.html">Architecture</a></li>
+	<li><a href="Being reasonable.html">Being reasonable</a></li>
+	<li><a href="Blaming the people.html">Blaming the people</a></li>
+	<li><a href="Centralisation.html">Centralisation</a></li>
+	<li><a href="Climate change.html">Climate change</a></li>
+	<li><a href="Colonialist narratives.html">Colonialist narratives</a></li>
+	<li><a href="Constant connectivity.html">Constant connectivity</a></li>
+	<li><a href="Consumerism.html">Consumerism</a></li>
+	<li><a href="Dispositionism.html">Dispositionism</a></li>
+	<li><a href="Ecological crisis.html">Ecological crisis</a></li>
+	<li><a href="End of history.html">End of history</a></li>
+	<li><a href="Energy.html">Energy</a></li>
+	<li><a href="Energy consumption increasing.html">Energy consumption increasing</a></li>
+	<li><a href="Extreme weather.html">Extreme weather</a></li>
+	<li><a href="Faulty meta-optimisation.html">Faulty meta-optimisation</a></li>
+	<li><a href="Government.html">Government</a></li>
+	<li><a href="Greed.html">Greed</a></li>
+	<li><a href="Hemispherical asymmetry (Brain).html">Hemispherical asymmetry (Brain)</a></li>
+	<li><a href="Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></li>
+	<li><a href="Hobbesian views.html">Hobbesian views</a> - Lives can be nasty, brutish, and short. All lives aren't.</li>
+	<li><a href="Hyperstimuli.html">Hyperstimuli</a></li>
+	<li><a href="Identity.html">Identity</a></li>
+	<li><a href="Individualism.html">Individualism</a></li>
+	<li><a href="Inequality.html">Inequality</a></li>
+	<li><a href="Insect loss.html">Insect loss</a></li>
+	<li><a href="Knowledge isn't wisdom.html">Knowledge isn't wisdom</a></li>
+	<li><a href="Lack of dark spaces.html">Lack of dark spaces</a></li>
+	<li><a href="Lack of humility.html">Lack of humility</a></li>
+	<li><a href="Lack of masculine and feminine.html">Lack of masculine and feminine</a></li>
+	<li><a href="Lack of quiet spaces.html">Lack of quiet spaces</a></li>
+	<li><a href="Lack of resilient systems.html">Lack of resilient systems</a></li>
+	<li><a href="Lack of the longterm.html">Lack of the longterm</a></li>
+	<li><a href="Lack of time.html">Lack of time</a></li>
+	<li><a href="Malnutrition.html">Malnutrition</a></li>
+	<li><a href="Map and territory.html">Map and territory</a></li>
+	<li><a href="Mass climate migration.html">Mass climate migration</a></li>
+	<li><a href="Material extraction.html">Material extraction</a></li>
+	<li><a href="Monocultures (agriculture).html">Monocultures (agriculture)</a></li>
+	<li><a href="Monopolies.html">Monopolies</a></li>
+	<li><a href="Naive techno-optimism.html">Naive techno-optimism</a></li>
+	<li><a href="Naive techno-pessimism.html">Naive techno-pessimism</a></li>
+	<li><a href="Net negative caloric extraction.html">Net negative caloric extraction</a></li>
+	<li><a href="No precautionary principle.html">No precautionary principle</a></li>
+	<li><a href="Nothing is local.html">Nothing is local</a></li>
+	<li><a href="Nuclear war.html">Nuclear war</a> - "A container of ashes might one day be thrown from the sky, which could burn the land and boil the oceans." - Koyaanisqatsi</li>
+	<li><a href="Obesity.html">Obesity</a></li>
+	<li><a href="Ocean acidification.html">Ocean acidification</a></li>
+	<li><a href="Only 'can we' never 'should we'.html">Only 'can we' never 'should we'</a></li>
+	<li><a href="Over-reliance on technology.html">Over-reliance on technology</a></li>
+	<li><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a> - So much more than the natural systems can handle in any reasonable time frame.</li>
+	<li><a href="Polarisation.html">Polarisation</a></li>
+	<li><a href="Pollution.html">Pollution</a> - "Near the Day of Purification, there will be cobwebs spun back and forth in the sky." - Koyaanisqatsi</li>
+	<li><a href="Population growth.html">Population growth</a></li>
+	<li><a href="Poverty.html">Poverty</a></li>
+	<li><a href="Profit.html">Profit</a> - A company in balance makes little profit.</li>
+	<li><a href="Quality.html">Quality</a> - Too much quantity.</li>
+	<li><a href="Quantification.html">Quantification</a> - Too little quality.</li>
+	<li><a href="Racism.html">Racism</a></li>
+	<li><a href="Reductionism.html">Reductionism</a></li>
+	<li><a href="Resources.html">Resources</a> - "If we dig precious things from the land, we will invite disaster." - Koyaanisqatsi</li>
+	<li><a href="Scientism.html">Scientism</a></li>
+	<li><a href="Sedentary lifestyles.html">Sedentary lifestyles</a></li>
+	<li><a href="Sex and sexuality.html">Sex and sexuality</a></li>
+	<li><a href="Sexism.html">Sexism</a></li>
+	<li><a href="Simplifications.html">Simplifications</a></li>
+	<li><a href="Soil erosion.html">Soil erosion</a></li>
+	<li><a href="Solutionism.html">Solutionism</a> - In tech circles we sometimes talk about being solution-oriented. How can one be solution-oriented without first being problem-oriented?</li>
+	<li><a href="Suicide.html">Suicide</a></li>
+	<li><a href="The minimisation of all things wild.html">The minimisation of all things wild</a></li>
+	<li><a href="The spectacle.html">The spectacle</a> - What's left that hasn't been subtly devoured into the spectacle?</li>
+	<li><a href="Tipping points.html">Tipping points</a></li>
+	<li><a href="Too much speed and noise.html">Too much speed and noise</a></li>
+	<li><a href="Tragedy of the vanishing commons.html">Tragedy of the vanishing commons</a></li>
+	<li><a href="Travel.html">Travel</a></li>
+	<li><a href="Unbalanced longtermism.html">Unbalanced longtermism</a></li>
+	<li><a href="Waste.html">Waste</a></li>
+	<li><a href="Yuppie dystopia.html">Yuppie dystopia</a> - Pathetic extravagance.</li>
 </ul>
 <br>
 <br>
