--- a/content/Lack of belonging.html
+++ b/content/Lack of belonging.html
@@ -5,10 +5,39 @@
 <p>We, as humans, require our people, our place, and a clarity of our role in it all. Most importantly, away from all abstraction, we require a feeling of belonging.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Lack of feeling needed.html">Lack of feeling needed</a></strong></li>
-	<li>  <strong><a href="Nothing is local.html">Nothing is local</a></strong></li>
-	<li>  <strong><a href="Mental health.html">Mental health</a></strong></li>
-	<li>  <strong><a href="Migration.html">Migration</a></strong></li>
+	<li><a href="Elderly care.html">Elderly care</a> - Where do our elders belong? Away from sight? For how long has it been so?</li>
+	<li><a href="Emotional crisis.html">Emotional crisis</a></li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - A deep feeling of belonging comes with responsibilities for the place or context to which you belong.</li>
+	<li><a href="Identity.html">Identity</a> - We pluck our identities from dead trees without roots.</li>
+	<li><a href="Ignorance of everything being sacred.html">Ignorance of everything being sacred</a></li>
+	<li><a href="Individualism.html">Individualism</a> - What else is there?</li>
+	<li><a href="Lack of communities.html">Lack of communities</a></li>
+	<li><a href="Lack of cultural control systems.html">Lack of cultural control systems</a> - We've lost the instinctive morals of place and people.</li>
+	<li><a href="Lack of feeling needed.html">Lack of feeling needed</a></li>
+	<li><a href="Lack of humility.html">Lack of humility</a> - The humility of belonging, being part of something together with others, living in one's proper place in both space and time.</li>
+	<li><a href="Lack of love.html">Lack of love</a></li>
+	<li><a href="Lack of masculine and feminine.html">Lack of masculine and feminine</a> - Few modern children grow up belonging to a group of people displaying and sharing what one can be and become as a man or woman, young and old.</li>
+	<li><a href="Lack of purpose.html">Lack of purpose</a></li>
+	<li><a href="Loneliness.html">Loneliness</a></li>
+	<li><a href="Loss of cultural complexity.html">Loss of cultural complexity</a> - Turns out that a globalised culture consisting of so-called individuals, all of them allowed to be "themselves" in all of their glory, becomes quite non-complex. Of course, I can't know that there are alternatives that are sure to be more complex but I can easily imagine that a world consisting of a mosaic of cultures, all interconnected but clearly themselves, each belonging to a place, the people in that place belonging to that culture... I don't know, there's something enticing here, isn't there? Idealistic? Unrealistic? Perhaps. Then again, what we have is unrealistic and terrible so I think we're allowed to envision something different.</li>
+	<li><a href="Material extraction.html">Material extraction</a> - Few who deeply belong to a place would treat it the way modern humans treat the earth.</li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a></li>
+	<li><a href="Mental health.html">Mental health</a></li>
+	<li><a href="Migration.html">Migration</a></li>
+	<li><a href="Nihilism.html">Nihilism</a></li>
+	<li><a href="No respect for indigenous wisdom.html">No respect for indigenous wisdom</a> - Indigenous wisdom revolves around belonging, of course we don't respect it.</li>
+	<li><a href="No value in maintenance.html">No value in maintenance</a> - Not belonging anywhere, either in space nor time, there is no value in anything staying the way it is. One step further in this thought, not belonging anywhere, is there any value in anything? If we are who we are only in relation to other beings, who do we think we are?</li>
+	<li><a href="Nothing is local.html">Nothing is local</a></li>
+	<li><a href="Parenting.html">Parenting</a> - It takes a village to raise a child. Expand on that as far as you can. What is meant by the phrase? Diversity of people? More than just parents? Small enough to know everyone and therefore to know who you are and where you fit in? Different ages, professions, opinions? A support network? Local healthcare? Walking distance rather than highways? Keep going. We can make an entire landscape of 250 aspects of what it means that it takes a village to raise a child that knows it belongs.</li>
+	<li><a href="Resources.html">Resources</a> - Do indigenous people speak this way about "resources"?</li>
+	<li><a href="Selfishness.html">Selfishness</a></li>
+	<li><a href="Social erosion.html">Social erosion</a></li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a></li>
+	<li><a href="Story of separation.html">Story of separation</a> - Our entire society is based on our lack of belonging. Why do you think the sons of colonialists now turn towards other planets? Please, leave, I beg you.</li>
+	<li><a href="Suicide.html">Suicide</a> - Acorn falling from no tree.</li>
+	<li><a href="The desacration of all places.html">The desacration of all places</a></li>
+	<li><a href="Violence.html">Violence</a></li>
+	<li><a href="Yuppie dystopia.html">Yuppie dystopia</a> - Digital nomads unite.</li>
 </ul>
 <br>
 <br>
