--- a/content/Lack of communities.html
+++ b/content/Lack of communities.html
@@ -11,16 +11,37 @@
 </blockquote>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Lack of belonging.html">Lack of belonging</a></strong></li>
-	<li>  <strong><a href="Lack of feeling needed.html">Lack of feeling needed</a></strong></li>
-	<li>  <strong><a href="Nothing is local.html">Nothing is local</a></strong></li>
-	<li>  <strong><a href="Elderly care.html">Elderly care</a></strong></li>
-	<li>  <strong><a href="Healthcare.html">Healthcare</a></strong></li>
-	<li>  <strong><a href="Mental health.html">Mental health</a></strong></li>
-	<li>  <strong><a href="Suicide.html">Suicide</a></strong></li>
-	<li>  <strong><a href="Emotional crisis.html">Emotional crisis</a></strong></li>
-	<li>  <strong><a href="Lack of compassion.html">Lack of compassion</a></strong></li>
-	<li>  <strong><a href="Lack of empathy.html">Lack of empathy</a></strong></li>
+	<li><a href="Dealing with death.html">Dealing with death</a></li>
+	<li><a href="Directionlessness.html">Directionlessness</a></li>
+	<li><a href="Educational crisis.html">Educational crisis</a> - It takes a village to teach a child.</li>
+	<li><a href="Ego.html">Ego</a> - Only one voice is ever present.</li>
+	<li><a href="Elderly care.html">Elderly care</a></li>
+	<li><a href="Emotional crisis.html">Emotional crisis</a></li>
+	<li><a href="Identity.html">Identity</a> - Who shows you who you are?</li>
+	<li><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></li>
+	<li><a href="Individualism.html">Individualism</a> - Individualism isn't some sought for ideal, it is the end result of our gradual uprooting of communities.</li>
+	<li><a href="Lack of belonging.html">Lack of belonging</a></li>
+	<li><a href="Lack of cultural control systems.html">Lack of cultural control systems</a> - Communities can have powerful subtle control systems.</li>
+	<li><a href="Lack of feeling needed.html">Lack of feeling needed</a></li>
+	<li><a href="Lack of love.html">Lack of love</a> - To grow up and live, cradled in a web of loving intentions.</li>
+	<li><a href="Lack of masculine and feminine.html">Lack of masculine and feminine</a> - Chop wood with your grandfather or scroll social media and binge on porn?</li>
+	<li><a href="Lack of purpose.html">Lack of purpose</a></li>
+	<li><a href="Laws.html">Laws</a></li>
+	<li><a href="Loneliness.html">Loneliness</a></li>
+	<li><a href="Loss of cultural complexity.html">Loss of cultural complexity</a> - Mosaic of smaller communities would yield a cultural complexity and diversity difficult to imagine. The internet sometimes gives a hint of what it could look like.</li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a></li>
+	<li><a href="Mental health.html">Mental health</a> - Eeyore is always included no matter how depressed he is.</li>
+	<li><a href="Migration.html">Migration</a></li>
+	<li><a href="Missing elders.html">Missing elders</a></li>
+	<li><a href="Mistreatment of other humans.html">Mistreatment of other humans</a></li>
+	<li><a href="Monocultures (people).html">Monocultures (people)</a> - Free to be individually different we become equally indifferent.</li>
+	<li><a href="Nothing is local.html">Nothing is local</a> - Imagine a world where everything you love and care for lies within a day's hike. Everything and everyone.</li>
+	<li><a href="Parenting.html">Parenting</a> - There is rarely a community for parents and their children to fall back on.</li>
+	<li><a href="Selfishness.html">Selfishness</a></li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a> - Sangha, the spiritual community, is one of the three jewels of buddhism. Ānanda approached the Buddha, "Venerable sir, this is half of the holy life, that is, good friendship, good companionship, good comradeship." Buddha replies, "Not so, Ānanda! Not so, Ānanda! This is the entire holy life, Ānanda, that is, good friendship, good companionship, good comradeship. When a bhikkhu has a good friend, a good companion, a good comrade, it is to be expected that he will develop and cultivate the Noble Eightfold Path." One of the three jewels but also the entirety of a holy life.</li>
+	<li><a href="Story of separation.html">Story of separation</a> - The alleged truth of the story becomes obvious when considering our own separation.</li>
+	<li><a href="Tragedy of the vanishing commons.html">Tragedy of the vanishing commons</a></li>
+	<li><a href="Yuppie dystopia.html">Yuppie dystopia</a></li>
 </ul>
 <br>
 <br>
